--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -24,11 +24,10 @@
 
 - name: Import dependencies
   file: 
-    src: "{{ role_path }}/files/index.html.j2"
-    dest: /home/{{ system_user }}/webapp/index.html
+    src: index.html.j2
+    dest: "/home/{{ system_user }}/webapp/index.html"
     owner: "{{ system_user }}"
     group: "{{ system_user }}"
-    state: link
     mode: 0644
 
 - name: Run docker-compose up
