--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -25,7 +25,7 @@
 - name: Import dependencies
   file: 
     src: index.html.j2
-    dest: "/home/{{ system_user }}/webapp/index.html"
+    dest: "{{ compose_project_dir }}/webapp/index.html"
     owner: "{{ system_user }}"
     group: "{{ system_user }}"
     mode: 0644
