--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -23,7 +23,7 @@
     mode: 0644
 
 - name: Import dependencies
-  file: 
+  template: 
     src: index.html.j2
     dest: "{{ compose_project_dir }}/webapp/index.html"
     owner: "{{ system_user }}"
