--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -30,7 +30,7 @@
 - name: Create Apache container
   docker_container:
     name: webapp
-    image: httpd::{{ apache_version }}
+    image: httpd:{{ apache_version }}
     ports:
       - "80:80"
     recreate: yes
